--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -2,10 +2,12 @@
 
 a {
   text-decoration: none;
+  color: #000000;
 }
 
 body {
   display: flex;
+  flex-direction: column;
   height: 100vh;
   margin: 0;
   overflow: hidden;
@@ -32,20 +34,34 @@ input {
 }
 
 ul {
+  display: flex;
   list-style-type: none;
+  
+  margin: 0;
+  padding: 0;
+  gap: 12px;
+}
+
+.header, 
+.footer {
+  display: flex;
+  padding: 12px;
 }
 
 .header,
 .footer {
-  display: flex;
   justify-content: space-between;
-  gap: 16px;
 }
-
+ 
 .footer {
-  align-items: flex-end;
+  background-color: lightgray;
 }
 
-.header {
-  align-items: flex-start;
+.content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
 }
